Prevent BiblioteksVagten button from covering the EAN-nr by adding som extra padding to the footer

--- a/css/bibsdb.styles.css
+++ b/css/bibsdb.styles.css
@@ -117,6 +117,7 @@ a:focus {
 /* line 79, ../sass/configuration/_bibsdb.configuration.scss */
 .bottom {
   background-color: #6d6e71;
+  padding-bottom: 30px;
 }
 
 /**
